# TalkGPT

./: pyproject.toml
tg/: app.py
tg/chatgpt/: chatgpt.py
tg/speech_to_text/: speech_recognition.py  whisper_stt.py
tg/text_to_speech/: azure_tts.py  base_tts.py  text_to_speech.py
