[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
dev = [
    "ipython<9.0.0,>=8.11.0",
    "black<24.0.0,>=23.1.0",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "talkgpt"
version = "0.1.0"
description = "xx"
authors = [
    {name = "Wincer", email = "WincerChan+github@gmail.com"},
    {name = "ningkp", email = "ningkp@nuaa.edu.cn"},
]
dependencies = [
    "edge-tts<7.0.0,>=6.1.3",
    "python-dotenv<2.0.0,>=1.0.0",
    "gtts>=2.3.1",
    "SpeechRecognition>=3.9.0",
    "pydub>=0.25.1",
    "PyAudio>=0.2.13",
    "requests>=2.31.0",
    "openai==0.28",
    "ffmpeg>=1.4",
    "ffprobe>=0.5",
]
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

